--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -14,7 +14,7 @@
         }
 
         .header {
-            background-color: #fff;
+            background-color: #c8fbde;
             color: #333;
             padding: 10px 20px;
             display: flex;
