feat: modify orders details for admin users

--- a/backend/templates/order_list.html
+++ b/backend/templates/order_list.html
@@ -89,6 +89,8 @@
                         </select>
                         <button type="submit">Actualizar</button>
                     </form>
+                    <!-- Botón para actualizar el pedido -->
+                    <a href="{% url 'update_order' order.id %}" style="background-color: blue;">Actualizar Pedido</a>
                 </td>
             </tr>
             {% empty %}
