--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -266,6 +266,7 @@
         <div class="header-buttons">
             {% if user.is_staff %}
                 <a href="{% url 'order_list' %}" class="admin-orders-button">Ver Pedidos</a>
+                <a href="{% url 'user_list' %}" class="admin-orders-button" style="background-color: blue;">Ver Usuarios</a>
             {% endif %}
             {% if user.is_authenticated %}
             <a href="{% url 'profile' %}" class="user-email">{{ user.email }}</a>
