--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -243,8 +243,8 @@
             background-color: #1e874b;
         }
         .footer {
-            background-color: #27ae60;
-            color: white;
+            background-color: #c8fbde;
+            color: black;
             padding: 20px;
             margin-top: 20px;
             text-align: center;
@@ -394,7 +394,7 @@
                 <h3>JMDP2 Tienda de electrodomésticos</h3>
                 <p>Dirección: Calle Luis Montoto 123, Sevilla, España</p>
                 <p>Teléfono: +34 123 456 789</p>
-                <p>Correo: contacto@JMDP2.com</p>
+                <p>Correo: jmdp2dynamics@gmail.com</p>
             </div>
             <div class="footer-logo">
                 {% load static %}
