fix: email confirmation

--- a/backend/templates/email_confirmation.html
+++ b/backend/templates/email_confirmation.html
@@ -18,7 +18,7 @@
     <p><strong>Número de Seguimiento:</strong> {{ order.track_number }}</p>
     <p><strong>Total:</strong> €{{ order.total }}</p>
 
-    <a href="http://127.0.0.1:8000/track_order_guest/?track_number={{ order.track_number }}"
+    <a href="https://pgpi-2-7.onrender.com/track_order_guest/?track_number={{ order.track_number }}"
         style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px;">
         Estado del Pedido
     </a>
